--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 
 html, body
 {
-  background: #000;
+  background: #ffffff;
   width: 100%;
   height: 100%;
 }
@@ -267,7 +267,7 @@ body, html {
   bottom: 20px;
   width: 100%;
   text-align: center;
-  color: #fff;
+  color: #000000;
   font-size: 0.9rem;
   font-weight: 300;
   font-family: 'Lato', sans-serif;
